--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
             las cosas increibles que se
             puden hacer con ramas
             </p>
+            <p>Los blogs con la mejor
+            fomra de compartir 
+            informacion y tus ideas.
+            Mucho mas que ir a 
+            conferencias o salir en 
+            Youtube. Excepto si eres
+            un rockstar. Pero
+            estadisticamente no lo 
+            eres.... por ahora.
+            </p>
         </div>
     </div>
 </body>
