Agregue pie de página, cambie cabecera maestra y puse todo azul

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post"> 
             <h1>Este es el título 
@@ -33,6 +33,7 @@
             estadisticamente no lo 
             eres.... por ahora.
             </p>
+            <p>Este es un pie de página</p>
         </div>
     </div>
 </body>
