--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             estadisticamente no lo 
             eres.... por ahora.
             </p>
-            <p>Este es un pie de página</p>
+            <p>Mi blog Hyperblog</p>
+        </div>
+        <div>
+            <div id="footer">Hecho por Kevin Franco</div>
         </div>
     </div>
 </body>
